# scouter

./: .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  codecov.yml  docker-compose.yml  index.html  makefile  objects.inv  pyproject.toml  release-plz.toml  sitemap.xml  test.py
crates/scouter/: Cargo.toml  Makefile
crates/scouter/benches/: profile.rs
crates/scouter/src/: lib.rs
crates/scouter_agents/: Cargo.toml
crates/scouter_agents/src/: error.rs  lib.rs
crates/scouter_alerts/: Cargo.toml
crates/scouter_alerts/src/: lib.rs
crates/scouter_auth/: Cargo.toml
crates/scouter_auth/src/: auth.rs  error.rs  permission.rs
crates/scouter_client/: Cargo.toml
crates/scouter_client/src/: error.rs  lib.rs  scouter.rs
crates/scouter_contracts/: Cargo.toml
crates/scouter_contracts/src/: lib.rs
crates/scouter_dataframe/: Cargo.toml
crates/scouter_dataframe/benches/: dataset_benchmark.rs  session_config_bench.rs  stress_test.rs  trace_service_benchmark.rs  utils.rs
crates/scouter_dataframe/src/: caching_store.rs  error.rs  lib.rs  storage.rs
crates/scouter_dataframe/tests/: cloud_trace.rs  eval_scenarios.rs
crates/scouter_dispatch/: Cargo.toml
crates/scouter_dispatch/src/: lib.rs
crates/scouter_drift/: Cargo.toml
crates/scouter_drift/src/: base.rs  drifter.rs  error.rs  lib.rs  utils.rs
crates/scouter_error/: Cargo.toml
crates/scouter_error/src/: lib.rs
crates/scouter_evaluate/: Cargo.toml
crates/scouter_evaluate/src/: agent.rs  assertion.rs  error.rs  evaluate.rs  genai.rs  lib.rs  llm.rs  runner.rs  scenario.rs  types.rs  util.rs  utils.rs
crates/scouter_events/: Cargo.toml
crates/scouter_events/examples/: README.md  kafka_integration.rs  rabbitmq_integration.rs  redis_integration.rs  utils.rs
crates/scouter_events/src/: error.rs  lib.rs
crates/scouter_genai/: Cargo.toml
crates/scouter_http/: Cargo.toml
crates/scouter_http/src/: error.rs  lib.rs
crates/scouter_macro/: Cargo.toml
crates/scouter_macro/src/: error.rs  lib.rs
crates/scouter_mocks/: Cargo.toml
crates/scouter_mocks/src/: dataset_server.rs  lib.rs  mock.rs  util.rs
crates/scouter_observability/: Cargo.toml
crates/scouter_observability/src/: error.rs  lib.rs
crates/scouter_profile/: Cargo.toml
crates/scouter_profile/src/: lib.rs
crates/scouter_semver/: Cargo.toml
crates/scouter_server/: Cargo.toml  build.rs
crates/scouter_server/migrations/: 20240614172639_setup.sql  20240910145546_add_alert_table.sql  20241004144114_observability.sql  20241031132958_add_bin_count_table.sql  20241215135805_custom_metric_record.sql
crates/scouter_server/proto/: message.v1.proto
crates/scouter_server/setup/: init.sql
crates/scouter_server/src/: lib.rs  main.rs
crates/scouter_settings/: Cargo.toml
crates/scouter_settings/src/: auth.rs  database.rs  events.rs  genai.rs  grpc.rs  http.rs  lib.rs  llm.rs  polling.rs  storage.rs
crates/scouter_sql/: Cargo.toml
crates/scouter_sql/src/: lib.rs
crates/scouter_state/: Cargo.toml
crates/scouter_state/src/: error.rs  lib.rs
crates/scouter_storage/: Cargo.toml
crates/scouter_storage/src/: lib.rs  storage.rs
crates/scouter_tonic/: Cargo.toml  build.rs
crates/scouter_tonic/proto/: grpc.v1.proto
crates/scouter_tonic/src/: client.rs  dataset_client.rs  error.rs  eval_scenario_client.rs  lib.rs
crates/scouter_tracing/: Cargo.toml
crates/scouter_tracing/src/: error.rs  exporter.rs  lib.rs  tracer.rs  types.rs  utils.rs
py-scouter/: Cargo.toml  Makefile  README.md  genai_drift_profile.json  mkdocs.yml  psi_drift_profile.json  pyproject.toml  spc_drift_profile.json
py-scouter/docs/: index.md  installation.md  mkdocs.yml  server.md
py-scouter/docs/docs/: index.md
py-scouter/examples/: README.md  api.py  config.py  custom_profile.json  drift_profile.json  gambit.py  local_scratch.py  main.py  psi_profile.json  quickstart.py  round_robin.py  spc_profile.json  utils.py
py-scouter/examples/evaluate/: README.md  __init__.py  adk_agent_eval.py  customer_support.py  multi_turn_eval.py  offline_genai_eval_dataset.py  query_reformulation_safety.py  recipe.py  reformualtion_relevance.py  regression_testing.py  retail_question.py
py-scouter/examples/monitor/: README.md
py-scouter/examples/profile/: README.md  pandas_dataframe.py
py-scouter/examples/psi/: api.py  types.py
py-scouter/examples/pydantic_ai/: simple.py
py-scouter/examples/tracing/: README.md  goodbye_service.py  hello_service.py  instrumentor_example.py  orchestrator_service.py  run_example.sh
py-scouter/python/scouter/: __init__.py  __init__.pyi  _scouter.pyi  drift.py  monitor.py  profile.py  scouter.py  trace.py
py-scouter/scouter/: __init__.py
py-scouter/scripts/: assemble_stubs.py  build_docs.py  create_stubs.py
py-scouter/src/: alert.rs  client.rs  dataset.rs  drift.rs  evaluate.rs  lib.rs  llm.rs  logging.rs  mock.rs  observe.rs  profile.rs  queue.rs  service_map.rs  test.rs  tracing.rs  transport.rs  types.rs
py-scouter/src/genai/: mod.rs
py-scouter/src/llm/: google.rs  mod.rs
py-scouter/src/py_scouter/: _scouter.rs  mod.rs
py-scouter/tests/: conftest.py  requirements.txt  test_scouter.py
py-scouter/tests/assets/: drift_config.json  drift_config_error.json
py-scouter/tests/integration/: conftest.py  test_agent_eval_pipeline_e2e.py  test_dataset_benchmarks.py  test_dataset_e2e.py  test_http_producer.py  test_integration.py  test_service_map.py
py-scouter/tests/test_api/: test_fastapi.py
py-scouter/tests/test_drift/: test_agent_profile.py  test_custom_config.py  test_custom_profile.py  test_drift_profile.py  test_genai_profile.py  test_llm_profile.py  test_monitor.py  test_psi_drift.py  test_queue.py  test_queue_capture.py  test_spc_drift.py
py-scouter/tests/test_eval/: conftest.py  test_agent_assertion.py  test_eval_orchestrator.py  test_eval_runner.py  test_genai_comparison.py  test_genai_eval.py  test_llm_eval.py  test_load_tasks.py  test_trace_assertion.py  test_trace_eval_path.py  test_trace_evaluator.py
(+1160 files in other folders)
