[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-scouter",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.4.6"
authors = [
      "Thorrester <support@demmlai.com>",
      "russellkemmit <support@demmlai.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/scouter"


[workspace.dependencies]
scouter-auth = { path = "crates/scouter_auth" }
scouter-client = { path = "crates/scouter_client" }
scouter-dispatch = { path = "crates/scouter_dispatch" }
scouter-drift = { path = "crates/scouter_drift", default-features = false }
scouter-error = { path = "crates/scouter_error" }
scouter-events = { path = "crates/scouter_events", default-features = false }
consumer-events = { path = "crates/consumer_events" }
scouter-observability = { path = "crates/scouter_observability" }
scouter-profile = { path = "crates/scouter_profile" }
scouter-server = { path = "crates/scouter_server" }
scouter-settings = { path = "crates/scouter_settings" }
scouter-dataframe = { path = "crates/scouter_dataframe" }
scouter-sql = { path = "crates/scouter_sql" }
scouter-types = { path = "crates/scouter_types" }

anyhow = "1.*"
axum = "0.*"
axum-extra = { version =  "0.*", features = ["cookie"] }
approx = "0.*"
arrow = { version = "*" } 
arrow-array = { version = "*" }
async-trait = "0.*"
base64 = "0.22.*"
chrono ={ version = "0.*", features = ["serde"] }
colored_json = "*"
cron = "0.*"
crossbeam-queue = "0.*"
datafusion = { version = "*", features = ["parquet"] }

futures = "0.*"
include_dir = "0.*"
indicatif = "0.*"
itertools = "0.*"
jsonwebtoken = "9.*"
metrics = { version = "0.*", default-features = false }
metrics-exporter-prometheus = { version = "0.*", default-features = false }
mockito = "1.*"
ndarray = { version = "0.*", features = ["rayon"] }
ndarray-rand = "0.*"
ndarray-stats = "0.*"
noisy_float = "0.*"
numpy = "0.*"
num-traits = "0.*"
object_store = { version = "0.11.*", features = ["aws", "azure", "gcp" ] }
parquet = { version = "*", features = ["arrow"] }
password-auth = "1.*"
pyo3 = { version = ">=0.*, <1.0.0", features = ["chrono", "anyhow", "extension-module"] }
rand = "0.9.*"
rayon = "1.*"
reqwest = { version = "0.12.*", features = ["json", "multipart", "rustls-tls", "rustls-tls-native-roots", "blocking" ], default-features = false }
rusty-logging="0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde_qs = "0.*"
sqlx = { version = "0.*", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "json"] }
strum = "0.*"
strum_macros = "0.*"

tempfile = "3.*"
thiserror = "2.*"
time = "0.*"
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.*", features = ["sync"] }
tower-http = { version = "0.*", features = ["cors"] }
tracing = "0.*"
tracing-subscriber = {version = "0.*", features = ["json", "time"]}
url = "2.*"

# RabbitMQ dependencies
lapin = { version = "2.*" }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false
