[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-scouter",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.13.0"
authors = [
      "Thorrester <support@demmlai.com>",
      "russellkemmit <support@demmlai.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/scouter"


[workspace.dependencies]
scouter-auth = { path = "crates/scouter_auth", version = "0.13.0" }
scouter-client = { path = "crates/scouter_client", version = "0.13.0" }
scouter-dispatch = { path = "crates/scouter_dispatch", version = "0.13.0" }
scouter-drift = { path = "crates/scouter_drift", version = "0.13.0", default-features = false }
scouter-evaluate = { path = "crates/scouter_evaluate", version = "0.13.0" }
scouter-events = { path = "crates/scouter_events", version = "0.13.0", default-features = false }
scouter-http = { path = "crates/scouter_http", version = "0.13.0" }
scouter-observability = { path = "crates/scouter_observability", version = "0.13.0" }
scouter-profile = { path = "crates/scouter_profile", version = "0.13.0" }
scouter-server = { path = "crates/scouter_server", version = "0.13.0" }
scouter-semver = { path = "crates/scouter_semver", version = "0.13.0" }
scouter-settings = { path = "crates/scouter_settings", version = "0.13.0" }
scouter-dataframe = { path = "crates/scouter_dataframe", version = "0.13.0" }
scouter-macro = { path = "crates/scouter_macro", version = "0.13.0" }
scouter-state = { path = "crates/scouter_state", version = "0.13.0" }
scouter-sql = { path = "crates/scouter_sql", version = "0.13.0" }
scouter-tonic = { path = "crates/scouter_tonic", version = "0.13.0" }
scouter-tracing = { path = "crates/scouter_tracing", version = "0.13.0" }
scouter-types = { path = "crates/scouter_types", version = "0.13.0" }
scouter-mocks = { path = "crates/scouter_mocks" }
test-utils = { path = "crates/test_utils" }

anyhow = "1.*"
axum = { version = "0.*", features = ["macros"] }
axum-extra = { version =  ">=0.10, <1.0", features = ["cookie"] }
approx = "0.5.1"
arrow = { version = "57.*" }
arrow-array = { version = "57.*" }
async-trait = ">=0.1"
base64 = ">=0.22"
chrono ={ version = "0.*", features = ["serde"] }
colored_json = "5.*"
cron = "0.*"
crossbeam-queue = "0.*"
datafusion = { version = "51.*", features = ["parquet"] }
futures-util = { version = "0.*" }
flume = "0.11.*"
futures = "0.*"
hex = "0.*"
include_dir = "0.*"
indicatif = "0.*"
itertools = "0.*"
jsonwebtoken = "9.*"
metrics = { version = "0.*", default-features = false }
metrics-exporter-prometheus = { version = "0.*", default-features = false }
mimalloc = { version = "*", features = ["secure"] }
mockito = "1.*"
mini-moka = "0.*"
#ndarray = { version = "0.16.1", features = ["rayon"] }
#ndarray-rand = "0.15"
ndarray = { version = "0.*", features = ["rayon"] }
ndarray-rand = "0.*"
ndarray-stats = "0.*"
noisy_float = "0.*"
numpy = "0.*"
num-traits = "0.*"
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp" ] }
opentelemetry = { version = "0.31.0" }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
opentelemetry-proto = { version = "0.31.0" , features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
owo-colors = "4.*"
parquet = { version = ">=55.*", features = ["arrow"] }
password-auth = "1.*"
potato-head = { git = "https://github.com/demml/potatohead.git", branch = "main" }
pyo3 = { version = "0.*", features = ["abi3-py310", "chrono", "anyhow", "extension-module"] }
pyo3-async-runtimes = { version = "0.*", features = ["tokio-runtime"] }
pythonize = "0.*"
rand = "0.9.*"
rayon = "1.*"
redis = { version = "0.*", features = ["tokio-comp"] }
regex = "1.*"
reqwest = { version = "0.12.*", features = ["json", "multipart", "rustls-tls", "rustls-tls-native-roots", "blocking" ], default-features = false }
rusty-logging="0.*"
semver = "1.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde_qs = "0.*"
simsimd = "6.5.*"
sqlx = { version = "0.*", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "json"] }
strum = "0.*"
strum_macros = "0.*"
tabled = { version = "0.*", features = ["ansi"] }
tempfile = "3.*"
thiserror = "2.*"
time = "0.*"
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.*", features = ["sync"] }
tower-http = { version = "0.*", features = ["cors"] }
tokio-util = "0.*"
tracing = "0.*"
tracing-subscriber = {version = "0.*", features = ["json", "time"]}
url = "2.*"
statrs = "0.18.0"

# gRPC/Tonic dependencies
tonic = { version = "0.*" }
tonic-health = { version = "0.*" }
tonic-middleware = { version = "0.*" } # need for async interceptors
tonic-prost = { version = "0.*" }
prost = { version = "0.*" }
prost-types = { version = "0.*" }


# RabbitMQ dependencies
lapin = { version = "2.*" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false
