[tool.poetry]
name = "scouter"
version = "0.1.0"
description = ""
authors = ["Thorrester <steven.forrester@shipt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.develop.dependencies]
maturin = "^1.4.0"

[project]
name = "scouter"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "scouter._scouter"
bindings = 'pyo3'
features = ["pyo3/extension-module"]