[package]
name = "py-scouter"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scouter"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { workspace = true }
numpy = { workspace = true }
num-traits = { workspace = true }
ndarray-stats = { workspace = true }
scouter-client = { workspace = true }
tracing-subscriber = { workspace = true }
time = "0.*"
tracing = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
