[package]
name = "py-scouter"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scouter"
crate-type = ["cdylib", "rlib"]


[dependencies]
scouter = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
num-traits = { workspace = true }
ndarray-stats = { workspace = true }
tracing-subscriber = {version = "0.3.18"}
time = "0.*"
tracing = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
