[package]
name = "py-scouter"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scouter"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { workspace = true }
numpy = { workspace = true }
num-traits = { workspace = true }
ndarray-stats = { workspace = true }
potato-head = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rusty-logging = { workspace = true }
scouter-client = { workspace = true }
scouter-server = { workspace = true , optional = true, features = ["kafka", "rabbitmq", "redis_events"] }
scouter-mocks = { workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true,  optional = true }
tracing-subscriber = { workspace = true }
time = "0.*"
tracing = { workspace = true }

[features]
default = []
server = ["scouter-server", "tokio", "reqwest", "scouter-mocks/server"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3