[tool.poetry]
name = "scouter"
version = "0.2.4-rc.4"
description = ""
authors = ["Thorrester <support@demmlai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
polars = "^1.0.0"
pandas = ">=1.5.3, <3"
rusty-logger = "^0.3.0"
pydantic = "^2.7.1"
tenacity = "^8.4.2"
pyarrow = ">=15.0.0, <17.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"
pytest = "^7"
pytest-cov = "^5.0.0"
ruff = "^0.1"
mypy = "^1"
black = "22.3.0"
pylint = "^3"
pytest-lazy-fixture = "^0.6.3"
psutil = "^5.9.8"
isort = "^5.13.2"
pandas-stubs = "^2.2.2.240603"
pdoc = "^14.5.1"
confluent-kafka = ">=2.3.0"
types-confluent-kafka = "^1.2.1"
httpx = "^0.27.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = "0.25.0" }


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.MASTER]
ignore-paths = ["python/scouter/utils/comparison/*"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "design",
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-nested-blocks",
    "unused-argument",
    "fixme",
    "import-outside-toplevel"
]


[tool.flake8]
# This section is just a doc placeholder..see setup.cfg
max-complexity = 10
format = "pylint"
statistics = "True"
max-line-length = 125
# ignore non-PEP8 lints
ignore = ["E203", "W503", "W0511"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.mypy]
# platform configuration
python_version = "3.9"
platform = "linux"
mypy_path = "stubs"
ignore_missing_imports = true
plugins = [
    "numpy.typing.mypy_plugin",
]
exclude = [
    "python/scouter/utils/comparison/*",
]

[project]
name = "scouter-ml"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    'pandas>=1.5.3, <3.0.0', 
    'rusty_logger>=0.3.0, <1.0.0',
    'numpy>=1.23.0',
    'pydantic>=2.7.1, <3.0.0',
    'polars>=1.0.0, <2.0.0',
    'pyarrow>=15.0.0, <17.0.0',
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka >= 2.3.0, < 3.0.0",
    "tenacity >= 8.4.2, < 9.0.0",
    ]
httpx = [
    "httpx >= 0.27.0, < 1.0.0",
    "tenacity >= 8.4.2, < 9.0.0",
    ]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "scouter._scouter"
cargo-extra-args = "--features extension-module"