[package]
name = "scouter-llm"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

license = "MIT"
description = "Rust Scouter GenAI utility create for monitoring"


[lib]
doctest = false

[dependencies]
potato-head = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }


[features]
mock = ["potato-head/mock", "tokio"]