[package]
name = "scouter-alerts"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Alert logic to be used in with Scouter Server"

[dependencies]
chrono = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
scouter-contracts = { workspace = true }
scouter-dispatch = { workspace = true }
scouter-error = { workspace = true }
scouter-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

