[package]
name = "scouter-auth"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

license = "MIT"
description = "Rust Scouter authentication logic"

[lib]
doctest = false

[dependencies]
password-auth = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

scouter-sql = { workspace = true }
 