[package]
name = "scouter-client"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Client and server contract for scouter"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true}
scouter-dispatch = { workspace = true }
scouter-drift = { workspace = true, default-features = false }
scouter-events = { workspace = true, features = ["kafka-vendored", "rabbitmq", "redis_events"], default-features = false }
scouter-observability = { workspace = true }
scouter-profile = { workspace = true }
scouter-settings = { workspace = true }
scouter-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
ndarray = { workspace = true }
noisy_float = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
num-traits = { workspace = true }
ndarray-stats = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

