[package]
name = "scouter-contracts"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Client and server contract for scouter"

[dependencies]
scouter-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

