[package]
name = "scouter-dataframe"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "DataFusion client for long-term storage of scouter data"

[dependencies]
scouter-settings = { workspace = true }
scouter-types = { workspace = true }

arrow = { workspace = true }
arrow-array  = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
deltalake = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
potato-head = { workspace = true, features = ["mock"] }
scouter-mocks = { workspace = true, features = ["server"] }
tracing-subscriber = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

