[package]
name = "scouter-drift"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Drift logic for Scouter"

[dependencies]
scouter-error = { workspace = true }
scouter-types = { workspace = true }


pyo3 = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
noisy_float = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
ndarray = { workspace = true }
numpy = { workspace = true }
ndarray-stats = { workspace = true }
cron = { workspace = true }
tracing = { workspace = true }
colored_json = { workspace = true }
thiserror = { workspace = true }

# Dispatch dependencies
reqwest = { version = "0.12.8", optional = true, features = ["json"] }
futures = { version = "0.3.30", optional = true}


[features]
default = []
dispatch = ["reqwest", "futures"]

[dev-dependencies]
approx = "0.5.1"
ndarray-rand = "0.14.0"
criterion = { version = "0.4", features = ["html_reports"] }
futures = "0.3.30"
rand = "0.8.5"
mockito = "1.4.0"
tokio = { version = "1.27.0", features = ["full"] }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true