[package]
name = "scouter-evaluate"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "LLM Evaluation logic for Scouter"

[lib]
doctest = false

[dependencies]
scouter-profile = { workspace = true }
scouter-state = { workspace = true }
scouter-types = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
owo-colors = { workspace = true }
pyo3 = { workspace = true }
potato-head = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simsimd = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
potato-head = { workspace = true, features = ["mock"] }