[package]
name = "scouter-evaluate"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "MIT"
description = "LLM Evaluation logic for Scouter"

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

[lib]
doctest = false

[dependencies]
scouter-profile = { workspace = true }
scouter-state = { workspace = true }
scouter-types = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
owo-colors = { workspace = true }
pyo3 = { workspace = true }
potato-head = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simsimd = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
potato-head = { workspace = true, features = ["mock"] }
scouter-mocks = { workspace = true, features = ["server"] }