[package]
name = "scouter-events"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Logic for setting up and running Scouter event-driven consumers and producers"

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
rusty-logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scouter-contracts = { workspace = true }
scouter-error = { workspace = true }
scouter-settings = { workspace = true }
scouter-sql = { workspace = true, optional = true }
scouter-types = { workspace = true }
sqlx = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Kafka dependencies
rdkafka = { workspace = true, optional = true}

# RabbitMQ dependencies
lapin = { workspace = true, optional = true }

[features]
default = ["sql"]
kafka = ["rdkafka"]
rabbitmq = ["lapin"]
sql = ["scouter-sql", "sqlx"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
